# VisionInspector

./: README.md
backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  docker-compose.yml  pyproject.toml  pyrightconfig.json
backend/.github/workflows/: backend-ci.yml
backend/app/: dependencies.py  main.py
backend/app/api/: predict.py
backend/app/core/: config.py  model_names.py
backend/app/schemas/: prediction.py  prediction_result.py
backend/app/services/: inference_service.py  model_loader.py
backend/app/utils/: image_utils.py
backend/tests/api/: test_predict.py  test_root.py
frontend/: README.md  package-lock.json  package.json
frontend/src/lib/api/: client.ts
frontend/src/lib/components/: Card.svelte  ImagePreview.svelte  LoadingSpinner.svelte  OverlayViewer.svelte  ResultCard.svelte
frontend/src/lib/components/features/: ImagePreview.svelte  ModelSelector.svelte  OverlayViewer.svelte  ResultCard.svelte  UploadArea.svelte
frontend/src/lib/components/ui/: Button.svelte  EmptyState.svelte  ErrorMessage.svelte
frontend/src/lib/types/: image.ts  model.ts  prediction.ts
frontend/src/lib/utils/: image.ts
frontend/src/routes/: +layout.svelte  +page.svelte
